--- a/apps/backend/swagger/routes/auth.yaml
+++ b/apps/backend/swagger/routes/auth.yaml
@@ -6,9 +6,9 @@ register:
             content:
                 application/json:
                     schema:
-                        $ref: '../components.schemas.yaml#/components/schemas/UserRegistrationDTO'
+                        $ref: "../components.schemas.yaml#/components/schemas/UserRegistrationDTO"
         responses:
-            '200':
+            "200":
                 description: User registration successful
                 headers:
                     Set-Cookie:
@@ -18,12 +18,12 @@ register:
                 content:
                     application/json:
                         schema:
-                            $ref: '../components.schemas.yaml#/components/schemas/LoginSuccess'
+                            $ref: "../components.schemas.yaml#/components/schemas/LoginSuccess"
 
-            '400':
-                $ref: '../components.responses.yaml#/components/responses/BadRequestError'
-            '500':
-                $ref: '../components.responses.yaml#/components/responses/BadRequestError'
+            "400":
+                $ref: "../components.responses.yaml#/components/responses/BadRequestError"
+            "500":
+                $ref: "../components.responses.yaml#/components/responses/BadRequestError"
 login:
     post:
         summary: Log in as a user
@@ -32,9 +32,9 @@ login:
             content:
                 application/json:
                     schema:
-                        $ref: '../components.schemas.yaml#/components/schemas/UserLoginDTO'
+                        $ref: "../components.schemas.yaml#/components/schemas/UserLoginDTO"
         responses:
-            '200':
+            "200":
                 description: User login successful
                 headers:
                     Set-Cookie:
@@ -44,8 +44,8 @@ login:
                 content:
                     application/json:
                         schema:
-                            $ref: '../components.schemas.yaml#/components/schemas/LoginSuccess'
-            '400':
-                $ref: '../components.responses.yaml#/components/responses/BadRequestError'
-            '500':
-                $ref: '../components.responses.yaml#/components/responses/ServerSideError'
+                            $ref: "../components.schemas.yaml#/components/schemas/LoginSuccess"
+            "400":
+                $ref: "../components.responses.yaml#/components/responses/BadRequestError"
+            "500":
+                $ref: "../components.responses.yaml#/components/responses/ServerSideError"
