--- a/apps/backend/swagger/routes/components/powersupplies.yaml
+++ b/apps/backend/swagger/routes/components/powersupplies.yaml
@@ -1,7 +1,7 @@
 powersupplies:
     get:
         responses:
-            '200':
+            "200":
                 description: gets all powersupplies
                 content:
                     application/json:
@@ -14,11 +14,11 @@ powersupplies:
                                         type: integer
                                         description: ID of the PowerSupply.
                                     data:
-                                        $ref: '../../components.schemas.yaml#/components/schemas/PowerSupplyDTO'
+                                        $ref: "../../components.schemas.yaml#/components/schemas/PowerSupplyDTO"
                                     component:
-                                        $ref: '../../components.schemas.yaml#/components/schemas/ComponentDTO'
-            '500':
-                $ref: '../../components.responses.yaml#/components/responses/ServerSideError'
+                                        $ref: "../../components.schemas.yaml#/components/schemas/ComponentDTO"
+            "500":
+                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
         security:
             - sessionCookie: []
     post:
@@ -26,29 +26,29 @@ powersupplies:
             required: true
             content:
                 application/json:
-                        schema:
-                            $ref: '../../components.schemas.yaml#/components/schemas/PowerSupplyDTO'
+                    schema:
+                        $ref: "../../components.schemas.yaml#/components/schemas/PowerSupplyDTO"
         responses:
-            '200':
-                $ref: '../../components.responses.yaml#/components/responses/Success'
-            '400':
-                $ref: '../../components.responses.yaml#/components/responses/BadRequestError'
-            '500':
-                $ref: '../../components.responses.yaml#/components/responses/ServerSideError'
+            "200":
+                $ref: "../../components.responses.yaml#/components/responses/Success"
+            "400":
+                $ref: "../../components.responses.yaml#/components/responses/BadRequestError"
+            "500":
+                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
         security:
             - sessionCookie: []
 powersuppliesPowerSupplyId:
     get:
         parameters:
-          - in: path
-            name: powerSupplyId
-            required: true
-            description: ID of PowerSupply
-            schema:
-                type: integer
-                format: int64
+            - in: path
+              name: powerSupplyId
+              required: true
+              description: ID of PowerSupply
+              schema:
+                  type: integer
+                  format: int64
         responses:
-            '200':
+            "200":
                 description: gets a powersupply with powerSupplyId
                 content:
                     application/json:
@@ -59,10 +59,10 @@ powersuppliesPowerSupplyId:
                                     type: integer
                                     description: ID of the PowerSupplyDTO.
                                 data:
-                                    $ref: '../../components.schemas.yaml#/components/schemas/PowerSupplyDTO'
+                                    $ref: "../../components.schemas.yaml#/components/schemas/PowerSupplyDTO"
                                 component:
-                                    $ref: '../../components.schemas.yaml#/components/schemas/ComponentDTO'
-            '404':
-                $ref: '../../components.responses.yaml#/components/responses/NotFoundError'
-            '500':
-                $ref: '../../components.responses.yaml#/components/responses/ServerSideError'
+                                    $ref: "../../components.schemas.yaml#/components/schemas/ComponentDTO"
+            "404":
+                $ref: "../../components.responses.yaml#/components/responses/NotFoundError"
+            "500":
+                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
