--- a/apps/backend/swagger/routes/components/processors.yaml
+++ b/apps/backend/swagger/routes/components/processors.yaml
@@ -1,15 +1,15 @@
 processors:
     get:
         parameters:
-          - in: query
-            name: socket
-            description: Socket of processor
-            required: false
-            schema:
-                type: string
-                example: "LGA1200"
+            - in: query
+              name: socket
+              description: Socket of processor
+              required: false
+              schema:
+                  type: string
+                  example: "LGA1200"
         responses:
-            '200':
+            "200":
                 description: gets all processors
                 content:
                     application/json:
@@ -22,11 +22,11 @@ processors:
                                         type: integer
                                         description: ID of the Processor.
                                     data:
-                                        $ref: '../../components.schemas.yaml#/components/schemas/ProcessorDTO'
+                                        $ref: "../../components.schemas.yaml#/components/schemas/ProcessorDTO"
                                     component:
-                                        $ref: '../../components.schemas.yaml#/components/schemas/ComponentDTO'
-            '500':
-                $ref: '../../components.responses.yaml#/components/responses/ServerSideError'
+                                        $ref: "../../components.schemas.yaml#/components/schemas/ComponentDTO"
+            "500":
+                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
         security:
             - sessionCookie: []
     post:
@@ -34,30 +34,29 @@ processors:
             required: true
             content:
                 application/json:
-                        schema:
-                            $ref:
-                                '../../components.schemas.yaml#/components/schemas/ProcessorDTO'
+                    schema:
+                        $ref: "../../components.schemas.yaml#/components/schemas/ProcessorDTO"
         responses:
-            '200':
-                $ref: '../../components.responses.yaml#/components/responses/Success'
-            '400':
-                $ref: '../../components.responses.yaml#/components/responses/BadRequestError'
-            '500':
-                $ref: '../../components.responses.yaml#/components/responses/ServerSideError'
+            "200":
+                $ref: "../../components.responses.yaml#/components/responses/Success"
+            "400":
+                $ref: "../../components.responses.yaml#/components/responses/BadRequestError"
+            "500":
+                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
         security:
             - sessionCookie: []
 processorsProcessorId:
     get:
         parameters:
-          - in: path
-            name: processorId
-            required: true
-            description: ID of Processor
-            schema:
-                type: integer
-                format: int64
+            - in: path
+              name: processorId
+              required: true
+              description: ID of Processor
+              schema:
+                  type: integer
+                  format: int64
         responses:
-            '200':
+            "200":
                 description: gets processorId processor
                 content:
                     application/json:
@@ -68,10 +67,10 @@ processorsProcessorId:
                                     type: integer
                                     description: ID of the Processor.
                                 data:
-                                    $ref: '../../components.schemas.yaml#/components/schemas/ProcessorDTO'
+                                    $ref: "../../components.schemas.yaml#/components/schemas/ProcessorDTO"
                                 component:
-                                    $ref: '../../components.schemas.yaml#/components/schemas/ComponentDTO'
-            '404':
-                $ref: '../../components.responses.yaml#/components/responses/NotFoundError'
-            '500':
-                $ref: '../../components.responses.yaml#/components/responses/ServerSideError'
+                                    $ref: "../../components.schemas.yaml#/components/schemas/ComponentDTO"
+            "404":
+                $ref: "../../components.responses.yaml#/components/responses/NotFoundError"
+            "500":
+                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
